# Tessera

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/GranularEngine/: CircularBuffer.h  Engine.cpp  Engine.h  EnvelopeType.h  Grain.cpp  Grain.h  GrainEnvelope.cpp  GrainEnvelope.h  GrainPool.cpp  GrainPool.h  GranularSettings.h  Scheduler.cpp  Scheduler.h
